--- a/src/theme/transition.scss
+++ b/src/theme/transition.scss
@@ -18,3 +18,14 @@
 	opacity: 0;
 	transform: translateY(10px);
 }
+
+.notification-enter-active,
+.notification-leave-active {
+	transition: opacity 0.2s ease, transform 0.2s ease;
+}
+
+.notification-enter-from,
+.notification-leave-to {
+	opacity: 0;
+	transform: translateY(-100px);
+}
