--- a/src/theme/scss_vars.scss
+++ b/src/theme/scss_vars.scss
@@ -1,9 +1,12 @@
 $colors: (
 	'white': var(--white),
 	'primary': var(--ion-color-primary),
+	'secondary': var(--ion-color-secondary),
 	'dark': var(--ion-color-dark),
 	'danger': var(--ion-color-danger),
 	'success': var(--ion-color-success),
 	'grey': var(--dark-grey),
 	'light': var(--ion-color-light),
+	'dark-grey': var(--dark-grey),
+	'medium': var(--ion-color-medium),
 );
