--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -32,7 +32,7 @@ http://ionicframework.com/docs/theming/ */
 	--ion-color-success-rgb: 45, 211, 111;
 	--ion-color-success-contrast: #ffffff;
 	--ion-color-success-contrast-rgb: 255, 255, 255;
-	--ion-color-success-shade: #218f4d  ;
+	--ion-color-success-shade: #218f4d;
 	--ion-color-success-tint: #3cac68;
 
 	/** warning **/
@@ -79,8 +79,11 @@ http://ionicframework.com/docs/theming/ */
 	--ion-background-color: #f5f6fb;
 	--ion-font-family: 'Roboto', sans-serif;
 	--white: #fff;
-	--grey: #DBDBDB;
+	--grey: #eaeaea;
+	/* --grey: #DBDBDB; */
 	--dark-grey: #565656;
+	--ion-color-white: var(--white);
+
 }
 
 @media (prefers-color-scheme: dark) {
