--- a/src/theme/scss_vars.scss
+++ b/src/theme/scss_vars.scss
@@ -9,4 +9,5 @@ $colors: (
 	'light': var(--ion-color-light),
 	'dark-grey': var(--dark-grey),
 	'medium': var(--ion-color-medium),
+	'dark-medium': var(--dark-medium),
 );
