--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -28,7 +28,7 @@ http://ionicframework.com/docs/theming/ */
 	--ion-color-tertiary-tint: #6370ff;
 
 	/** success **/
-	--ion-color-success: #26a357;
+	--ion-color-success: #62c332;
 	--ion-color-success-rgb: 45, 211, 111;
 	--ion-color-success-contrast: #ffffff;
 	--ion-color-success-contrast-rgb: 255, 255, 255;
@@ -84,6 +84,7 @@ http://ionicframework.com/docs/theming/ */
 	/* --grey: #DBDBDB; */
 	--dark-grey: #565656;
 	--ion-color-white: var(--white);
+	--dark-medium:#464646;
 
 }
 
@@ -115,7 +116,7 @@ http://ionicframework.com/docs/theming/ */
 		--ion-color-tertiary-shade: #5d58e0;
 		--ion-color-tertiary-tint: #7974ff;
 
-		--ion-color-success: #2fdf75;
+		--ion-color-success: #65d72e;
 		--ion-color-success-rgb: 47, 223, 117;
 		--ion-color-success-contrast: #000000;
 		--ion-color-success-contrast-rgb: 0, 0, 0;
